# LRTRack

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Tutorial.sublime-workspace  build.sh  create_release.sh  plugin.json
design/: 3rdDimension.afdesign  3rdDimensionPanel.afdesign  AlternateBigLight.afdesign  AlternateSmallLight.afdesign  AlternateSmallToggle.afdesign  AlternateSmallToggleLight.afdesign  BigKnob.afdesign  BlankPanel.afdesign  BlankPanelAged.afdesign  BlankPanelDebugger.afdesign  BlankPanelLight.afdesign  CogBig.afdesign  CogMiddle.afdesign  CogSmall.afdesign  DiodeLadderVCFAged.afdesign  DiodeLadderVCFClassic.afdesign  EchoBox.afdesign  IOPortB.afdesign  IOPortBLight.afdesign  IOPortC.afdesign  IOPortCLight.afdesign  Korg35VCF.afdesign  LCDFrameAged.afdesign  MS20.afdesign  MS20Aged.afdesign  MiddleKnob.afdesign  QuickMix.afdesign  QuickMixAged.afdesign  QuickMixLight.afdesign  SallyKorg35VCF.afdesign  ScrewLightC.afdesign  SmallKnob.afdesign  TestDriver.afdesign  TestDriverLight.afdesign  Type35VCF.afdesign  Type35VCFLight.afdesign  VCO.afdesign  VULevelMeter.afdesign  Westcoast.afdesign  Woldemar.afdesign  (+1 more)
res/: BigKnob.ai  BigKnobSmall.ai  BlankPanel.afdesign  BlankPanelM1.afdesign  BlankPanelSmall.afdesign  BlankPanel_Mark1.ai  IOPort.ai  IOPortB.afdesign  IOPortB.ai  IOPortC.afdesign  KnobScale.ai  KnobScaleMiddle.ai  KnobScaleSmall.ai  MS20.afdesign  MS20.ai  MiddleIncremental.afdesign  MiddleKnob.afdesign  MiddleKnob.ai  MiddleToggleKnob.ai  Patina.afdesign  PolySwitch.ai  QuickMix.afdesign  ScrewDark.afdesign  ScrewDark.ai  ScrewDarkB.afdesign  SimpleFilter.ai  SmallKnob.ai  Switch0.afdesign  Switch1.afdesign  ToggleKnob.afdesign  VCF.afdesign  VCF.ai  VCO.afdesign  VCO.ai  Westcoast.afdesign  WestcoastAged.afdesign  WoodLeftTop.afdesign
src/: AlmaFilter.cpp  BlankPanel.cpp  BlankPanel.hpp  BlankPanelEmpty.cpp  BlankPanelM1.cpp  BlankPanelM1.hpp  BlankPanelSmall.cpp  BlankPanelWood.cpp  DiodeVCF.cpp  LRComponents.cpp  LRComponents.hpp  LREvent.hpp  LRGestalt.hpp  LRModel.hpp  LRModule.cpp  LRModuleWidget.cpp  LindenbergResearch.cpp  LindenbergResearch.hpp  MS20Filter.cpp  QuickMix.cpp  ReShaper.cpp  ReShaper.hpp  Release.h  SimpleFilter.cpp  SimpleFilter.hpp  Speck.cpp  String.hpp  (+3 more)
(+117 files in other folders)
